[package]
name = "music_chooser"
version = "2.1.3"
edition = "2021"

[dependencies]
chrono = "0.4.38"
csv = "1.3.0"
download_rs = {version="0.2.0",features=["sync_download"]}
inquire = "0.7.5"
rand = "0.8.5"
rustydav = "0.1.3"
simple-zip = "1.0.1"
terminal_color_builder = "0.1.1"
zippylib = "0.1.0"
